welcome.lessons.welcome.loopfor.LoopCourseForest.scala.code
def ligne() {
	avance(4);
	gauche();
	avance(2);
	droite();
	avance(4);
	droite();
	avence(2);
	gauche();
	avance(4);
}
